Creacion del componente product.component con su .ts y .html respectivo (Componente creado de forma 'manual') se configura en app.module.ts para que el nuevo componente sea leido de forma correcta importanto la ubicacion del componente y declarandolo en la seccion de 'declarations'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <input type="text" [(ngModel)]="title">
 {{title}}
+<app-product></app-product>
 
 <div *ngIf="title === 'sebastian' || title === 'Sebastian'">
   <p>Hola Sebastian</p>
