--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,49 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0px;
+    padding: 0px;
+}
+
+.product-grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+}
+//@ Media permite manejar la cantidad de 
+// componentes que se veran en pantalla segun su
+// tamaño
+@media(min-width:576px){
+    .product-grid{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+/*
+
+@media(min-width:0px){
+    .product-grid{
+        background-color: pink;
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media(min-width:576px){
+    .product-grid{
+        background-color: yellow;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(min-width:768px){
+    .product-grid{
+        background-color: blue;
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media(min-width:992px){    
+    .product-grid{
+        background-color: red;
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+*/
