--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -1,14 +1,23 @@
 <h3>
-  Esto es un nuevo componente
-  {{ product.title }}
+  {{ product.title | uppercase}}
 </h3>
 
 <!-- Usamos [] para permitir modificar la variable src
   y asi poder reasignar su valor (Property Binding)-->
 <img [src]="product.image" alt="product" />
-<strong
-  >{{ product.price }}
-  {{ product.description }}
+<strong>
+  <!-- slicePipe Permite mostrar una cadena de caracteres
+      en un rango definido.
+      currencyPipe permite manejar formato 
+      Monedas segun la norma ISO 4217 
+  -->
+  {{ product.price | currency:'COP ' }}
+  {{ product.description | slice:0:10}}
 </strong>
+<!--
+  DatePipe Permite manipular el Formato de la fecha
+-->
+<p>{{today | date:'full'}}</p>
+
 
 <button (click)="addCart()">Agregar al carrito</button>
