se crea un pipe llamado exponenialPipe mediante el comando 'ng g p exponentialPipe' este comando crea dos archivos uno de pruebas y el otro donde podemos modificar y confihurar el pipe a nuestro antojo. Se aplica el nuevo pipe en el archivo app.component.html en el DataBinding 'powerNum'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <input type="text" [(ngModel)]="title" />
 {{ title }}
-
+<p>
+  <input type="text" [(ngModel)]="powerNum" />
+  {{ powerNum | exponentialPipe}}
+</p>
 <div *ngIf="title === 'sebastian' || title === 'Sebastian'">
   <p>Hola Sebastian</p>
 </div>
