Se crea una directiva mediante el comando 'ng g d nombre_Directiva' Las directivas modifican el DOM de forma DINAMICA en este ejemplo solo cambia el fondo del componente del DOM que resiva pero se podria usar en autocompletar un formulario o acciones que necesiten una modificacion de forma DINAMICA

--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -1,4 +1,8 @@
-<h3>
+<!--
+  appHighlight es una directiva creada para modificar
+  el background del elemento que recibe
+-->
+<h3 appHighlight>
   {{ product.title | uppercase}}
 </h3>
 
