Se crearon los componentes CONTACT, PRODUCTS, HOME, DEMO Y sus RUTAS (en el archivo app-routing.module.ts) para empezar a desarrollar el principio de UNA SOLA PRIORIDAD en cada uno de los componentes. Se depuro el .html y .ts del componente principal AppComponent y se agrego solo la etiqueta necesaria <router-outlet> en el app.component.html para poder mostrar todos los componentes hijos que estan declarados ya en app-routing.model.ts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,39 +1,1 @@
-<input type="text" [(ngModel)]="title" />
-{{ title }}
-<p>
-  <input type="text" [(ngModel)]="powerNum" />
-  {{ powerNum | exponentialPipe}}
-</p>
-<div *ngIf="title === 'sebastian' || title === 'Sebastian'">
-  <p>Hola Sebastian</p>
-</div>
-
-<div>
-  <div>
-    <button (click)="addItem()">Add Item</button>
-  </div>
-  <ul>
-    <li *ngIf="listNames.length === 0">
-      La lista esta vacia
-    </li>
-    <li *ngFor="let dato of listNames; index as i">
-      {{ i + 1 }} {{ dato }}
-      <button (click)="deleteItem()">Delete</button>
-    </li>
-  </ul>
-</div>
-
-<div class="product-grid">
-  <!-- Gracias al @Input que se agrego en la clase 
-    'producto.component.ts' a la variable llamada 'product' podemos 
-    usar PROPERTY BINDING [] para recibir su valor desde 
-    otro componente que en este caso es el Array 'products'
-    proveniente de 'app.component.ts' y de esta manera nos muestra
-    todas las propiedades sin necesidad de declararlas manualmente-->
-  <app-product
-    *ngFor="let producto of products"
-    (productClicked)="clickProduct($event)"
-    [product]="producto"
-  >
-  </app-product>
-</div>
+<router-outlet></router-outlet>
