Se modifica el componente header.component.html para aplicar 'routerLink y routerLinkActive' en rutas de navegacion, para seguir con la metodologia SPA y no tener que recargar sriempre la pagina, adicionalmente se agregaron sus respectivos scss del header. Ase agregar el componente Header a las componentes, contacts, home y products. Finalmente se agregaron rutas adiconales para la 'no declaracion de ruta' y 'rutas no existentes' (para esta ultima se creo un componente que maneja la pagina 404)

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,6 @@
 <p>header works!</p>
+<nav>
+    <a routerLink="/products" routerLinkActive="pagActual">Products</a>
+    <a routerLink="/contact" routerLinkActive="pagActual">Contact</a>
+    <a routerLink="/home" routerLinkActive="pagActual">Home</a>
+</nav>
