--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <p>products works!</p>
 <div class="product-grid">
     <!-- Gracias al @Input que se agrego en la clase 
