--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,1 +1,11 @@
 <p>product-detail works!</p>
+<div>
+    <img [src]="product.image" alt="Imagen del Producto">
+</div>
+<div>
+    <ul>
+        <li>Nombre: {{product.title}}</li>
+        <li>Precio: {{product.price | currency}}</li>
+    </ul>
+    <p>{{product.description}}</p>
+</div>
