--- a/src/app/producto/components/product/product.component.html
+++ b/src/app/producto/components/product/product.component.html
@@ -10,6 +10,7 @@
   y asi poder reasignar su valor [Property Binding]-->
 <img
   [src]="product.image"
+  [routerLink]="['/products',product.id]"
   alt="product"
 />
 <strong>
