Se instalo angular Material al proyecto mediante el comando 'ng add @angular/material'. Posteriormente se creo un Modulo que Importara las librerias de Angular Material Y las exportara para ser usada en otros Modulos desde el Modulo Material creado. En este Momento se importa la Libreria '@angular/material/button' y se trae el modulo 'MatButtonModule' El cual es que se Importa y se Exporta a la vez para ser usado en otros Modulos. Finalmente Se importa el modulo 'MaterialModule' dentro de 'product.model' para ser usado en el componente ''produc.component.html' llamando la etiqueta de boton llamada '<button mat-raised-button color=primary>Primary</button>'

--- a/src/app/producto/components/product/product.component.html
+++ b/src/app/producto/components/product/product.component.html
@@ -26,9 +26,18 @@
   DatePipe Permite manipular el Formato de la fecha
 -->
 <p>{{ today | date: "full" }}</p>
+<!--
+  Se Agrega Botton cn Angular Material, Recordar que primero
+  se importo la libreria en el Modulo de Material,
+  se le permitio que se pudiera exportar para ser usado en otros modulos
+  Y finalmente se importo el Modulo d Material al Moduloq ue lo usara
+  en este caso Product.model
 
-<button (click)="addCart()">Agregar al carrito</button>
+  Excelente documentacion en AngularMaterial.io
+-->
+<button (click)="addCart()"mat-raised-button color="primary">Agregar al carrito</button>
 <!--
   Property binding permite tambien concatenar cadenas con datos
 -->
 <a [routerLink]="['/products',product.id]"> VER DETALLE</a>
+
