--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+/* Configuracion antes de aplicar ANGULAR MATERIAL
 body {
     margin: 0px;
     padding: 0px;
 }
-
+*/
 .product-grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -47,3 +48,5 @@ body {
 }
 
 */
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
