Se Agregan estilos de Material a el Header del proyecto, incluyendole un Toolbar y un Badge (con su respectivo implementacion y exportacion en MaterialModule.ts), y se usan grillas con FlexBoxGrid, combinando una modificacion adicional agregada en el estilo de header.component.css (Esto nos permite ver que podemos usar una API externa + configuraciones propias (ej: myheader-row))

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,26 @@
 <p>header works!</p>
-<nav>
-    <a routerLink="/products" routerLinkActive="pagActual">Products</a>
-    <a routerLink="/contact" routerLinkActive="pagActual">Contact</a>
-    <a routerLink="/home" routerLinkActive="pagActual">Home</a>
-</nav>
+<!--
+    mat-toolbar es una etiqueta traida de AngularMaterial
+-->
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <!--
+        Aca se implementa flexbox mas info en http://flexboxgrid.com/
+    -->
+    <div class="row between-xs middle-xs myheader-row">
+      <nav>
+        <a mat-button routerLink="/products" routerLinkActive="pagActual"
+          >Products</a
+        >
+        <a mat-button routerLink="/contact" routerLinkActive="pagActual"
+          >Contact</a
+        >
+        <a mat-button routerLink="/home" routerLinkActive="pagActual">Home</a>
+      </nav>
+      <a mat-raised-button matBadge="8" matBadgeColor="warn">
+        <mat-icon>shopping_cart</mat-icon>
+        Carrito
+      </a>
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
