--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -4,5 +4,9 @@ nav > a {
 }
 
 nav > a.pagActual {
-    background-color: #e0eff9;
+    background-color: #000000;
+}
+
+.myheader-row{
+    width: 100%;
 }
