--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,17 @@
-<p>footer works!</p>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <div class="row end-xs middle-xs myfooter-row">
+      <div class="col-xs-2">
+        <span>footer works!</span>
+      </div>
+      <div class="col-xs-2">
+        <mat-icon
+          class="example-icon"
+          aria-hidden="false"
+          aria-label="Example user verified icon"
+          >verified_user</mat-icon
+        >
+      </div>
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
