Se modifico el html de product.component para agregarle CARD de Angular Material. Adicionalmente se corrigiieron estilos y se modifico el componente layaut para una mejor organizacion

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -9,6 +9,9 @@
         Por Defecto como es la plantilla principal la definiremos
         en la ruta principal '' (ver: app-routing.module.ts)
 -->
-<router-outlet></router-outlet>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+
 
 <app-footer></app-footer>
