--- a/src/app/producto/components/product/product.component.scss
+++ b/src/app/producto/components/product/product.component.scss
@@ -1,3 +1,6 @@
+/*
+ Estilos antes de aplicar Material Desing
+
 :host {
     margin: 2px;
     border: 1px solid black;
@@ -6,4 +9,18 @@
 }
 img {
     max-width: 100%;
+}
+ */
+.div-image {
+  height: 300px;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+  }
 }
