Se crea el metodo 'fecthProduct' dentro del componente 'product-detail.component.ts' para que atravez del metodo 'getProduct(id)' del servicio 'ProductsService' traiga el objeto 'Product' lo asigne a un atributo product que esta en product-detail para que a si vez sea leido y renderizado en su html. Posteriormente el metodo 'fecthProduct' se implementa en el 'ngOnInit'. Como ultima medida, de crea una condicion 'ngIf' donde se renderiza la vista del detalle del producto, para que el explorador no muestre error mientras espera a que se le envie los datos, porque el explorador esta en constante escucha entonces muentra error mientras no se le asigne datos (ver codigo en product-detail.component.html)

--- a/src/app/producto/components/product-detail/product-detail.component.html
+++ b/src/app/producto/components/product-detail/product-detail.component.html
@@ -1,11 +1,23 @@
 <p>product-detail works!</p>
-<div>
-    <img [src]="product.image" alt="Imagen del Producto">
+<!--
+    Se agrega una condicion que analiza que el producto no este NULL 
+    y si no esta null si renderizara en la vista
+-->
+<div *ngIf="product">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Nombre: {{ product.title }}</mat-card-title>
+      <mat-card-subtitle>Precio: {{ product.price | currency }}</mat-card-subtitle>
+    </mat-card-header>
+    <div class="div-image">
+      <img [src]="product.image" alt="Imagen del Producto" />
+    </div>
+    <mat-card-content>
+      <p>{{ product.description }}</p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>Ok</button>
+    </mat-card-actions>
+  </mat-card>
 </div>
-<div>
-    <ul>
-        <li>Nombre: {{product.title}}</li>
-        <li>Precio: {{product.price | currency}}</li>
-    </ul>
-    <p>{{product.description}}</p>
-</div>
+
