--- a/src/app/producto/components/product-detail/product-detail.component.html
+++ b/src/app/producto/components/product-detail/product-detail.component.html
@@ -16,7 +16,9 @@
       <p>{{ product.description }}</p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button (click)="createProduct()">Ok</button>
+      <button mat-button (click)="createProduct()">Crear</button>
+      <button mat-button (click)="updateProduct()">Actualizar</button>
+      <button mat-button (click)="deleteProduct()">Eliminar</button>
     </mat-card-actions>
   </mat-card>
 </div>
