Se configura un nuevo entorno de desarrollo llamado 'stag', y su configuracion en el 'ANGULAR.JSON'. Adicional se corrigio un error que indicaba al momento de construccion

--- a/src/app/demo/components/demo/demo.component.html
+++ b/src/app/demo/components/demo/demo.component.html
@@ -19,7 +19,7 @@
     </li>
     <li *ngFor="let dato of listNames; index as i">
       {{ i + 1 }} {{ dato }}
-      <button (click)="deleteItem()">Delete</button>
+      <button (click)="deleteItem(i)">Delete</button>
     </li>
   </ul>
 </div>
