--- a/src/app/admin/componets/nav/nav.component.html
+++ b/src/app/admin/componets/nav/nav.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item routerLink="/admin/create">Crear Producto</a>
       <a mat-list-item routerLink="/admin/table">Table</a>
       <a mat-list-item routerLink="/admin/dashboard">DashBoard</a>
+      <a mat-list-item routerLink="/admin/products">Products</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
