--- a/src/app/admin/componets/products-list/products-list.component.html
+++ b/src/app/admin/componets/products-list/products-list.component.html
@@ -4,7 +4,7 @@
     ** IMPORTANTE: poner todas las columnas que se definieron en 
     el array displayedColumns
 -->
-<table mat-table [dataSource]="products" class="mat-elevation-z8">
+<table mat-table [dataSource]="products" class="mat-elevation-z8 products-table">
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef>ID</th>
     <td mat-cell *matCellDef="let products">{{ products.id }}</td>
@@ -19,7 +19,10 @@
   </ng-container>
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>ACTIONS</th>
-    <td mat-cell *matCellDef="let products">{{ products.actions }}</td>
+    <td mat-cell *matCellDef="let products">
+      <button mat-raised-button >Editar</button>
+      <button mat-raised-button color="warn" (click)="deleteProduct(products.id)">Eliminar</button>
+    </td>
   </ng-container>
   <!-- 
         Estos dos ultimos elementos mat-header-row y mat-row
