--- a/src/app/admin/componets/products-list/products-list.component.html
+++ b/src/app/admin/componets/products-list/products-list.component.html
@@ -21,7 +21,7 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>ACTIONS</th>
     <td mat-cell *matCellDef="let products">
-      <button mat-raised-button >Editar</button>
+      <button mat-raised-button [routerLink]="['edit', products.id]">Editar</button>
       <button mat-raised-button color="warn" (click)="deleteProduct(products.id)">Eliminar</button>
     </td>
   </ng-container>
