--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -17,7 +17,7 @@
         >
         <a mat-button routerLink="/home" routerLinkActive="pagActual">Home</a>
       </nav>
-      <a mat-raised-button matBadge="8" matBadgeColor="warn">
+      <a mat-raised-button [matBadge]="total" matBadgeColor="warn">
         <mat-icon>shopping_cart</mat-icon>
         Carrito
       </a>
